test/conformance/chainsaw/generate/policy/cornercases/pol-clone-sync-create-source-after-policy/02-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: mycm
  namespace: pol-clone-sync-create-source-after-policy-ns
data:
  food: cheese
  day: monday
  color: red
