test/conformance/chainsaw/generate/policy/cornercases/pol-clone-sync-create-source-after-policy/chainsaw-step-01-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pol-clone-sync-create-source-after-policy-ns
