test/conformance/chainsaw/generate/policy/cornercases/pol-clone-sync-create-source-after-policy/chainsaw-step-02-apply-1-1.yaml
apiVersion: v1
data:
  color: red
  day: monday
  food: cheese
kind: ConfigMap
metadata:
  name: mycm
  namespace: pol-clone-sync-create-source-after-policy-ns
