test/conformance/chainsaw/generate/policy/cornercases/pol-clone-sync-create-source-after-policy/policy.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: pol-clone-sync-create-source-after-policy
  namespace: pol-clone-sync-create-source-after-policy-ns
spec:
  rules:
  - generate:
      apiVersion: v1
      clone:
        name: regcred
        namespace: pol-clone-sync-create-source-after-policy-ns
      kind: Secret
      name: mynewsecret
      namespace: pol-clone-sync-create-source-after-policy-ns
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    name: clone-secret
