test/conformance/chainsaw/generate/policy/cornercases/pol-clone-sync-create-source-after-policy/01-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: Policy
metadata:
  name: pol-clone-sync-create-source-after-policy
  namespace: pol-clone-sync-create-source-after-policy-ns
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
