test/conformance/chainsaw/generate/policy/cornercases/pol-clone-sync-create-source-after-policy/02-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: mynewsecret
  namespace: pol-clone-sync-create-source-after-policy-ns
