test/conformance/chainsaw/generate/policy/cornercases/pol-clone-sync-create-source-after-policy/chainsaw-step-02-assert-1-1.yaml
apiVersion: v1
kind: Secret
metadata:
  name: mynewsecret
  namespace: pol-clone-sync-create-source-after-policy-ns
