test/conformance/chainsaw/generate/policy/cornercases/pol-clone-sync-create-source-after-policy/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-clone-sync-create-source-after-policy
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: pol-clone-sync-create-source-after-policy
        - name: namespace
          value: pol-clone-sync-create-source-after-policy-ns
  - try:
    - apply:
        file: chainsaw-step-01-apply-1-3.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
    - assert:
        file: chainsaw-step-02-assert-1-1.yaml
